--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,17 @@
              xmlns:local="clr-namespace:DiceRoller"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <SolidColorBrush x:Key="ButtonsColor" Color="Purple"/>
+
+        <Style TargetType="Button" x:Key="ButtonsStyle">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Background" Value="{StaticResource ButtonsColor}"/>
+        </Style>
+        
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="70"/>
+        </Style>
     </Application.Resources>
 </Application>
