--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -22,21 +22,27 @@
                Grid.ColumnSpan="4"/>
         <Button x:Name="d20Button" Content="Roll d20"
                 Style="{StaticResource ButtonsStyle}"
+                Click="OperationButton_Click"
                 Grid.Row="1"/>
         <Button x:Name="d12Button" Content="Roll d12"
                 Style="{StaticResource ButtonsStyle}"
+                Click="OperationButton_Click"
                 Grid.Row="2"/>
         <Button x:Name="d8Button" Content="Roll d8"
                 Style="{StaticResource ButtonsStyle}"
+                Click="OperationButton_Click"
                 Grid.Row="3"/>
         <Button x:Name="d6Button" Content="Roll d6"
                 Style="{StaticResource ButtonsStyle}"
+                Click="OperationButton_Click"
                 Grid.Row="4"/>
         <Button x:Name="d4Button" Content="Roll d4"
                 Style="{StaticResource ButtonsStyle}"
+                Click="OperationButton_Click"
                 Grid.Row="5"/>
         <Button x:Name="d100Button" Content="Roll d100"
                 Style="{StaticResource ButtonsStyle}"
+                Click="OperationButton_Click"
                 Grid.Row="6"/>
     </Grid>
 </Window>
